Emit esm modules from tsickle
This happens when `googmodule` is false and `transformTypesToClosure`
is true.

--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -1,9 +1,12 @@
 {
   "compilerOptions": {
-    "target": "es2017",
-    "module": "commonjs",
+    "rootDir": ".",
+    "target": "ESNext",
+    "module": "ESNext",
     "outDir": "build/",
-    "strict": true
+    "strict": true,
+    "moduleResolution": "Bundler",
+    "esModuleInterop": true,
   },
   "exclude": [
     "test.ts"
