--- a/demo/package.json
+++ b/demo/package.json
@@ -17,5 +17,6 @@
   "scripts": {
     "build": "(cd ../ && yarn build) && tsc",
     "demo": "node --preserve-symlinks build/demo.js -- --outDir `pwd`/tsickle-out"
-  }
+  },
+  "type": "module"
 }
